# wroomer

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package.nix
.cargo/: config.toml
.github/workflows/: cachix-install-nix-action.yml
assets/shaders/: image.wgsl  shader_dvd.wgsl  spotlight.wgsl
src/: cli_args.rs  config.rs  main.rs  screenshot.rs  shader.wgsl  texture.rs  uniforms.rs  vector.rs
src/application/: image_render_pipeline.rs  mod.rs  spotlight_render_pipeline.rs  state.rs  texture.rs  uniforms.rs  vec2d.rs
