[package]
name = "wroomer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
clap = { version = "4.5.50", features = ["derive"] }
image = "0.25.8"
log = "0.4.28"
pollster = "0.4.0"
env_logger = "0.11.8"
wgpu = "27.0.1"
winit = "0.30.12"

xcap = { version = "0.7.1", optional = true }
libwayshot = { git = "https://github.com/waycrate/wayshot", rev = "df13eb4", optional = true }

[features]
default = ["dep:xcap"]
wayland = ["dep:libwayshot"]

[profile.profiling]
inherits = "release"
opt-level = 3
debug = 2
debug-assertions = false
overflow-checks = true
